cbase/nt/pthread_nt_compat.h

typedef CRITICAL_SECTION   pthread_mutex_t;
typedef void               pthread_mutexattr_t;
static inline int pthread_mutex_init(pthread_mutex_t* mutex, const pthread_mutexattr_t* attr) {
    (void) attr;
    if (!mutex) return EINVAL;
    InitializeCriticalSection(mutex);
    return 0;
}
static inline int pthread_mutex_lock(pthread_mutex_t* mutex) {
    if (!mutex) return EINVAL;
    EnterCriticalSection(mutex);
    return 0;
}
static inline int pthread_mutex_unlock(pthread_mutex_t* mutex) {
    if (!mutex) return EINVAL;
    LeaveCriticalSection(mutex);
    return 0;
}
static inline int pthread_mutex_destroy(pthread_mutex_t* mutex) {
    if (!mutex) return EINVAL;
    DeleteCriticalSection(mutex);
    return 0;
}